--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
   <body>
     <h1 style="text-align: center;"><span style="color: #cc0000;">"Discipline:
         The Engine That Puts You On The Winning Track!"</span></h1>
-    <div style="text-align: center;"><img src="file:///C:/Users/13125/Downloads/images/moneytrain.png"
+    <div style="text-align: center;"><img src="moneytrain.png"
 
-        alt="" title="money train" longdesc="file:///C:/Users/13125/Downloads/images/moneytrain.png"
+        alt="" title="money train" longdesc="moneytrain.png"
 
         style="width: 647px; height: 647px;"></div>
     <div style="text-align: center;"><br>
@@ -3992,3 +3992,4 @@ style="font-size:15pt;font-family:Arial,sans-serif;color:#000000;background-colo
     </a>
   </body>
 </html>
+
