--- a/index.html
+++ b/index.html
@@ -1223,7 +1223,8 @@ style="font-size:15pt;font-family:Arial,sans-serif;color:#000000;background-colo
         </span></b></div>
     <div style="text-align: center; margin-left: 273px; width: 714px;"><b><span
 
-          style="font-family: Arial,sans-serif;"><video src="file:///C:/Users/13125/Downloads/money%20falling.mp4"
+          style="font-family: Arial,sans-serif;"><video src="https://raw.githubusercontent.com/derrickmangram-888/discipline/blob/main/money-falling.mp4"
+
 
             preload="none" controls="controls" autoplay="autoplay" height="250"
 
@@ -1273,9 +1274,9 @@ href="https://davidallencapital.com/?refcode=102355746" title="business loan" ta
               <p dir="ltr" style="line-height:1.38;margin-top:12pt;margin-bottom:12pt;"><span
 
 style="font-size:15pt;font-family:Arial,sans-serif;color:#000000;background-color:transparent;font-weight:400;font-style:normal;font-variant:normal;text-decoration:none;vertical-align:baseline;white-space:pre;white-space:pre-wrap;"><br></span></p>
-            </b><b style="font-weight:normal;"><img src="file:///C:/Users/13125/Downloads/images/business%20owner%20website%20-%20Copy.png"
+            </b><b style="font-weight:normal;"><img src="business-owner-website-copy.png"
 
-                alt="" title="Business website owner" longdesc="file:///C:/Users/13125/Downloads/images/business%20owner%20website%20-%20Copy.png"
+                alt="" title="Business website owner" longdesc="business-owner-website-copy.png"
 
                 style="width: 224px; height: 224px;"></b><b style="font-weight:normal;">
               <p dir="ltr" style="line-height:1.38;margin-top:12pt;margin-bottom:12pt;"><span
@@ -2031,9 +2032,9 @@ style="font-size:15pt;font-family:Arial,sans-serif;color:#000000;background-colo
         </span></b></div>
     <div style="text-align: center; margin-left: 273px; width: 714px;"><b><span
 
-          style="font-family: Arial,sans-serif;"><img src="file:///C:/Users/13125/OneDrive/Pictures/learning.jpg"
+          style="font-family: Arial,sans-serif;"><img src="learning.jpg"
 
-            alt="" title="Learning" longdesc="file:///C:/Users/13125/OneDrive/Pictures/learning.jpg"><br>
+            alt="" title="Learning" longdesc="learning.jpg"><br>
         </span></b></div>
     <div style="text-align: center; margin-left: 273px; width: 714px;"><b><span
 
@@ -3992,4 +3993,5 @@ style="font-size:15pt;font-family:Arial,sans-serif;color:#000000;background-colo
     </a>
   </body>
 </html>
+
 
